<resources>
    <string name="app_name">DailyLedger</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_budget">Budget</string>
    <string name="title_notification">Notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="illustration">Gain total control\nof your money</string>
    <string name="illustration1">Become your own money manager\nand make every cent count</string>
    <string name="illustration3">Planning ahead</string>
    <string name="illustration_d3">Setup your budget for each category\nso you in control\n</string>
    <string name="illustration2">Know where your \nmoney goes</string>
    <string name="illustration_d2">"Track your transaction easily,\nwith categories and financial report "</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="verification">Verification</string>
    <string name="by_signing_up_you_agree_to_the_terms_of_service_and_privacy_policy">By signing up, you agree to the <b><font color='#681BFF'>Terms of Service and Privacy Policy</font></b></string>
    <string name="or_with">Or with</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="Verify">Verify</string>
    <string name="code_send_again"><u>I didn’t received the code? Send again</u></string>
    <string name="send_verification">We sent a verification code to your email %1$s. You can check your inbox.</string>
    <string name="enter_your_code">Enter your \nVerification Code</string>
    <string name="forgot">Forgot Password?</string>
    <string name="don_t_have_an_account_yet_sign_up">Don’t have an account yet? Sign Up</string>
    <string name="don_t_worry_enter">Don’t worry.\nEnter your email and we’ll send you a link to reset your password.</string>
    <string name="continue_">Continue</string>
    <string name="logout">Logout</string>

</resources>